# music-review-backend

./: .env.example  pyproject.toml
core/: settings.py  urls.py
music/: admin.py  models.py  serializers.py  urls.py  views.py
music/migrations/: 0001_initial.py
music/services/: musicbrainz.py
tests/: test_musicbrainz.py  test_musicbrainz_service.py
